<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/content"
android:background="@color/white">

    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp" />



    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/markerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="15dp"
                android:background="@drawable/white_rectangle"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/containerIDtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_large"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:text="@string/container"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold"
                    android:text="@string/next_collection"/>
                <TextView
                    android:id="@+id/containerNextCollectiontxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:text="@string/container"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold"
                    android:text="@string/fullness_rate"/>
                <TextView
                    android:id="@+id/containerFullNessRatetxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:text="@string/container"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:weightSum="2">
                    <Button
                        android:id="@+id/navigatebtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_green"
                        android:text="@string/navigate"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:textStyle="bold"/>

                    <Button
                        android:id="@+id/relocatebtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_green"
                        android:text="@string/relocate"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:textStyle="bold"/>
                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:id="@+id/saveDialogContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="15dp"
                android:background="@drawable/white_rectangle"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:text="@string/save_confirmtaion_msg"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:weightSum="1">
                    <Button
                        android:id="@+id/savebtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_green"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:textStyle="bold"/>

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:id="@+id/saveSuccessContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="25dp"
                android:background="@drawable/white_rectangle"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:text="@string/save_successfully_msg"/>


            </LinearLayout>

        </LinearLayout>




    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
