<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="28dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_lbl"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:textStyle="normal"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/font_large"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:hint="@string/username"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernametxt"
                        android:layout_width="match_parent"
                        android:nextFocusDown="@id/passwordtxt"
                        android:singleLine="true"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/ic_password"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>








            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/button_green"
                android:textSize="@dimen/font_large"/>
        </LinearLayout>






    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>